# profile.common.x11-common

./: AUTHORS  COPYING  Makefile.am  build.sh  configure.ac  project.config
packaging/: x11-common.spec
system/: display-manager-run.service  display-manager.service
